[package]
name = "miscel"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Small, miscellaneous functions that are useful for writing FFXIV launchers."
keywords = ["ffxiv", "modding"]
repository = "https://github.com/redstrate/Miscel"
authors = ["Joshua Goins <josh@redstrate.com>"]

[dependencies]
physis = { version = "0.5", default-features = false }
